# rustdoc-failure-116539

./: Cargo.toml
src/: lib.rs
