[package]
name = "pallet-shait"
version = "0.0.0"
edition = "2021"
[dependencies]
parity-scale-codec = { version = "3", features = ["derive"] }
scale-info = { version = "2", features = ["derive"] }

# Substrate
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-session = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }

[features]
default = ["std"]
std = ["sp-std/std", "frame-support/std"]
